--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "firebase": "^10.1.0",
     "framer-motion": "^6.5.1",
     "millify": "^5.0.0",
     "next": "^13.4.12",
